--- a/template/index.html
+++ b/template/index.html
@@ -16,10 +16,18 @@
 <main>
 
     <div class="card" style="width: 18rem;">
-      <!--MANAGER-->
-      <!--ENGINEER-->
-      <!--INTERN-->
-      </div>
+      <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Name:</h5>
+          <p class="card-text">Position:</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">ID: </li>
+          <li class="list-group-item">Email: </li>
+          <li class="list-group-item">Github: </li>
+        </ul>
+    </div>
+
 </main>
 </body>
 </html>
